--- a/win/tm.vcxproj
+++ b/win/tm.vcxproj
@@ -23,6 +23,8 @@
     <ClInclude Include="..\include\tm\common.h" />
     <ClInclude Include="..\include\tm\sleep.h" />
     <ClInclude Include="..\include\tm\tm.h" />
+    <ClInclude Include="..\include\tm\types.h" />
+    <ClInclude Include="..\include\tm\version.h" />
     <ClInclude Include="..\src\common.h" />
     <ClInclude Include="..\src\default\default.h" />
     <ClInclude Include="..\src\thread\thread.h" />
