build: make automake build slient (less-verbose)

--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ LT_INIT
 AC_CHECK_LIB([m], [floor])
 AC_CHECK_LIB([pthread], [pthread_create])
 
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AC_SYS_LARGEFILE
 
 # Checks for header files.
