--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: autogen
+      run: sh ./autogen.sh
     - name: configure
       run: ./configure
     - name: make
